# aoc-2023

./: .git-blame-ignore-revs  .gitignore  README.md  pom.xml
python/: .gitignore  pyproject.toml  requirements.txt  run  setup.py  sloc
python/aoc2015/day01/: not_quite_lisp.py  not_quite_lisp_test.py  not_quite_list_test.py
python/aoc2015/day10/: __init__.py  elves_look_elves_say.py  elves_look_elves_say_test.py
python/aoc2015/day15/: __init__.py  science_for_hungry_people.py  science_for_hungry_people_test.py
python/aoc2016/day01/: __init__.py  no_time_for_a_taxicab.py  no_time_for_a_taxicab_test.py
python/aoc2016/day07/: __init__.py  internet_protocol_version_7.py  internet_protocol_version_7_test.py
python/aoc2016/day08/: __init__.py  screen.py  two_factor_authentication.py  two_factor_authentication_test.py
python/aoc2016/day09/: __init__.py  explosives_in_cyberspace.py  explosives_in_cyberspace_test.py
python/aoc2016/day10/: __init__.py  balance_bots.py  balance_bots_test.py
python/aoc2016/day16/: __init__.py  dragon_checksum.py  dragon_checksum_test.py
python/aoc2017/day01/: __init__.py  inverse_captcha.py  inverse_captcha_test.py
python/aoc2017/day13/: __init__.py  packet_scanners.py  packet_scanners_faster.py  packet_scanners_faster_test.py  packet_scanners_test.py
python/aoc2017/day17/: __init__.py  spinlock.py  spinlock_test.py
python/aoc2018/day01/: chronal_calibration.py  chronal_calibration_test.py
python/aoc2018/day12/: __init__.py  subterranean_sustainability.py  subterranean_sustainability_test.py
python/aoc2018/day18/: __init__.py  settlers_of_the_north_pole.py  settlers_of_the_north_pole_test.py
python/aoc2019/day06/: __init__.py  universal_orbit_map.py  universal_orbit_map_test.py
python/aoc2019/day08/: __init__.py  space_image_format.py  (+1 more)
python/leet/: max_consecutive_ones.py
python/util/: Histogram.py  aoc.py  aoc_all.py  aoc_all_2023.py  block_print.py  block_print_test.py  geom_2d.py  histogram_test.py  linear_grid.py  perf.py  perf_test.py  timing.py  timing_test.py  tracing.py  tracing_test.py
(+202 files in other folders)
