[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = { }

[project]
name = "barneyb-aoc-2023"
description = "My Advent of Code 2023 solvers"
authors = [
    { name = "Barney Boisvert", email = "bboisvert@gmail.com" }
]
version = "2023.1"
requires-python = ">= 3.11"
dependencies = [
    "advent-of-code-data",
    "black",
    "pygount",
    "pytest",
]

[project.entry-points."adventofcode.user"]
barneyb = "util.aoc:entry_point"
