[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = { }

[project]
name = "barneyb-aoc-2023"
description = "My Advent of Code 2023 solvers"
authors = [
    { name = "Barney Boisvert", email = "bboisvert@gmail.com" }
]
version = "2023.1"
requires-python = ">= 3.11"
dependencies = [
    "advent-of-code-data",
    "black",
    "pygount",
    "pytest",
]

[project.entry-points."adventofcode.user"]
me = "util.aoc:entry_point"

[project.entry-points."barneyb_aoc_all.support"]
python23 = "util.aoc_all_2023:support"
java23 = "util.aoc_all_2023:support_java"
[project.entry-points."barneyb_aoc_all.solve"]
python23 = "util.aoc_all_2023:solve"
java23 = "util.aoc_all_2023:solve_java"
